--- a/src/Components/Categories/Categories.css
+++ b/src/Components/Categories/Categories.css
@@ -17,6 +17,11 @@
     background-color: white;
     color: #E11D48;
 }
+@media (max-width:1300px) {
+    .categories ul li {
+    padding: 15px 30px;
+}
+}
 .categories ul li:first-child {
     border-top-left-radius: 8px;
     border-bottom-left-radius: 8px;
