--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,16 @@
-
-  
+footer {
+    background-color: #18181B;
+    margin-top: 20px;
+    padding: 20px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: white;
+}
+footer p {
+    color: #18181B;
+    font-size: 16px;
+    font-weight: 600;
+    margin: 0;
+    padding: 0;
+}
